[CSS Regions] Mouse over an element does not trigger :hover state for parent when the element is flowed in a region https://bugs.webkit.org/show_bug.cgi?id=111749

Patch by Radu Stavila <stavila@adobe.com> on 2013-05-29
Reviewed by Antti Koivisto.

Source/WebCore:

When searching for the hover ancestor and encountering a named flow thread,
the search will continue with the DOM ancestor of the top-most element
in the named flow thread.

Tests: fast/regions/hover-in-region-grandparent.html
       fast/regions/hover-in-region-parent-skip.html
       fast/regions/hover-in-region-parent-skip-inlines-anonymous.html
       fast/regions/hover-on-child-in-region.html
       fast/regions/hover-on-child-in-region-in-region.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::hoverAncestor):
* rendering/RenderObject.h:

LayoutTests:

* fast/regions/hover-in-region-grandparent-expected.txt: Added.
* fast/regions/hover-in-region-grandparent.html: Added.
* fast/regions/hover-in-region-parent-skip-expected.txt: Added.
* fast/regions/hover-in-region-parent-skip.html: Added.
* fast/regions/hover-in-region-parent-skip-inlines-anonymous-expected.txt: Added.
* fast/regions/hover-in-region-parent-skip-inlines-anonymous.html: Added.
* fast/regions/hover-on-child-in-region-expected.txt: Added.
* fast/regions/hover-on-child-in-region.html: Added.
* fast/regions/hover-on-child-in-region-in-region-expected.txt: Added.
* fast/regions/hover-on-child-in-region-in-region.html: Added.

Canonical link: https://commits.webkit.org/135206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150868 268f45cc-cd09-0410-ab3c-d52691b4dbfc